--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,6 @@
 <h1>Register</h1>
 <form action="/users/register" method="POST">
+  <%- include ('./partials/messages') %>
 <div>
     <label for="name">Name</label>
     <input
